Update langC code 02

--- a/codes/langC/02/Makefile
+++ b/codes/langC/02/Makefile
@@ -1,6 +1,7 @@
 CC=gcc
 all:
-	$(CC) -shared vetor.c vetor.h -o libvectors.so
+	# $(CC) -shared vetor.c vetor.h -o libvectors.so
+	$(CC) main.c vetor.c vetor.h
 clean:
 	rm -f a.out
 install:
